# zero-to-production-in-rust

./: Cargo.toml  Dockerfile  Makefile  README.md  spec.yaml  sqlx-data.json
configuration/: base.yaml
migrations/: 20230413115725_create_subscription_tokens_table.sql  20230507021805_create_users_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetory.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  newsletter.rs  subscription.rs  subscriptions.rs  subscriptions_confirm.rs
