[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tracing-actix-web = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.13"
uuid = {version = "1", features = ["v4"]}
chrono = {version = "0.4.22", features = ["clock"], default-features = false}
log = "0.4.0"
env_logger = "0.9.0"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features= ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
unicode-segmentation = "1.7.1"
rand = "0.8.5"
validator = "0.16"

[dependencies.sqlx]
version = "0.6"
default-features = false
# feature flags
features = [
	"runtime-tokio-rustls", # use tokio runtime as TLS backend
	"macros", # for sqlx::query! macro
	"postgres",
	"uuid",
	"chrono", # support for mappping SQL timestampz to the DateTime<T>
	"migrate",
	"offline"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
once_cell = "1"
claims = "0.7"
fake = "~2.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
wiremock = "0.5"
serde_json = "1"
linkify = "0.9.0"
